--- a/trunk/app/modules/supplier/config/routes/supplier.ini
+++ b/trunk/app/modules/supplier/config/routes/supplier.ini
@@ -40,4 +40,21 @@ routes.supplier_index_list_pager.defaults.controller = "index"
 routes.supplier_index_list_pager.defaults.action = "list"
 routes.supplier_index_list_pager.map.1 = "pageIndex"
 
+routes.supplier_index_view.type = Zend_Controller_Router_Route_Regex
+routes.supplier_index_view.route = "supplier/view/(\d+)"
+routes.supplier_index_view.reverse = "supplier/view/%d"
+routes.supplier_index_view.defaults.module = "supplier"
+routes.supplier_index_view.defaults.controller = "index"
+routes.supplier_index_view.defaults.action = "view"
+routes.supplier_index_view.map.1 = "supplier_id"
+
+routes.supplier_index_cate.type = Zend_Controller_Router_Route_Regex
+routes.supplier_index_cate.route = "supplier/cate/(\d+)"
+routes.supplier_index_cate.reverse = "supplier/cate/%d"
+routes.supplier_index_cate.defaults.module = "supplier"
+routes.supplier_index_cate.defaults.controller = "index"
+routes.supplier_index_cate.defaults.action = "cate"
+routes.supplier_index_cate.map.1 = "category_id"
+
+
 
